# sdmmc

./: .bare-test.toml  .gitignore  Cargo.toml  Makefile  README.md  bare-test.toml  build.rs  linker.ld  run.sh  rust-toolchain.toml
.cargo/: config.toml
docs/: SDMMC开发.md
firmware/: dt.dtb  dt.dts  output.dtb  output.dts
src/: block.rs  cmd.rs  constant.rs  dw_mmc.rs  entry.asm  err.rs  lib.rs  log.rs  main.rs  mmc_write.rs  sdhci.rs
src/emmc/: aux.rs  block.rs  clock.rs  cmd.rs  config.rs  constant.rs  info.rs  mod.rs  regs.rs  rockchip.rs  rockship.rs
src/sdhci/: block.rs  cmd.rs  constant.rs  mod.rs
src/uart/: mod.rs  pl011.rs
tests/: test.rs  tests.rs
